--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,11 @@
             </dependency>
             <dependency>
                 <groupId>com.buschmais.jqassistant.core</groupId>
+                <artifactId>configuration</artifactId>
+                <version>${jqa-core-framework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.buschmais.jqassistant.core</groupId>
                 <artifactId>analysis</artifactId>
                 <version>${jqa-core-framework.version}</version>
             </dependency>
