--- a/pom.xml
+++ b/pom.xml
@@ -303,11 +303,13 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <!-- todo java 11 -->
             <dependency>
                 <groupId>com.buschmais.jqassistant.plugin</groupId>
                 <artifactId>javaee6</artifactId>
                 <version>${jqa-javaee6-plugin.version}</version>
             </dependency>
+            <!-- -->
             <dependency>
                 <groupId>com.buschmais.jqassistant.plugin</groupId>
                 <artifactId>javaee6</artifactId>
