--- a/pom.xml
+++ b/pom.xml
@@ -170,7 +170,7 @@
             </dependency>
             <dependency>
                 <groupId>com.buschmais.jqassistant.neo4jserver</groupId>
-                <artifactId>neo4jv3</artifactId>
+                <artifactId>embedded</artifactId>
                 <version>${jqa-neo4jbackend.version}</version>
             </dependency>
             <dependency>
