--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
     <parent>
         <groupId>com.buschmais.jqassistant</groupId>
         <artifactId>jqa-uber-parent</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0-M4</version>
         <relativePath/>
     </parent>
 
     <groupId>com.buschmais.jqassistant</groupId>
     <artifactId>jqa-distribution-specification</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-M4</version>
 
     <name>jQAssistant Distribution Specification</name>
     <url>https://jqassistant.org/</url>
@@ -49,28 +49,28 @@
          ! It is used only to include the correct version of
          ! the documentation of the commandline tool in the user manual.
          !-->
-        <jqa-commandline-tool.version>2.0.0-SNAPSHOT</jqa-commandline-tool.version>
+        <jqa-commandline-tool.version>2.0.0-M4</jqa-commandline-tool.version>
 
         <!--
          ! Version of the Plugin of Apache Maven.
          ! It is used only to include the correct version of
          ! the documentation of the commandline tool in the user manual.
          !-->
-        <jqa-maven-plugin.version>2.0.0-SNAPSHOT</jqa-maven-plugin.version>
+        <jqa-maven-plugin.version>2.0.0-M4</jqa-maven-plugin.version>
 
         <!--
          ! Versions of the plugins to be included in a release.
          !-->
-        <jqa-core-framework.version>2.0.0-SNAPSHOT</jqa-core-framework.version>
-        <jqa-java-plugin.version>2.0.0-SNAPSHOT</jqa-java-plugin.version>
-        <jqa-json-plugin.version>2.0.0-SNAPSHOT</jqa-json-plugin.version>
-        <jqa-junit-plugin.version>2.0.0-SNAPSHOT</jqa-junit-plugin.version>
-        <jqa-own-constraints.version>2.0.0-SNAPSHOT</jqa-own-constraints.version>
-        <jqa-maven3-plugin.version>2.0.0-SNAPSHOT</jqa-maven3-plugin.version>
-        <jqa-neo4jbackend.version>2.0.0-SNAPSHOT</jqa-neo4jbackend.version>
-        <jqa-plugin-common.version>2.0.0-SNAPSHOT</jqa-plugin-common.version>
-        <jqa-yaml2-plugin.version>2.0.0-SNAPSHOT</jqa-yaml2-plugin.version>
-        <jqa-xml-plugin.version>2.0.0-SNAPSHOT</jqa-xml-plugin.version>
+        <jqa-core-framework.version>2.0.0-M4</jqa-core-framework.version>
+        <jqa-java-plugin.version>2.0.0-M4</jqa-java-plugin.version>
+        <jqa-json-plugin.version>2.0.0-M4</jqa-json-plugin.version>
+        <jqa-junit-plugin.version>2.0.0-M4</jqa-junit-plugin.version>
+        <jqa-own-constraints.version>2.0.0-M4</jqa-own-constraints.version>
+        <jqa-maven3-plugin.version>2.0.0-M4</jqa-maven3-plugin.version>
+        <jqa-neo4jbackend.version>2.0.0-M4</jqa-neo4jbackend.version>
+        <jqa-plugin-common.version>2.0.0-M4</jqa-plugin-common.version>
+        <jqa-yaml2-plugin.version>2.0.0-M4</jqa-yaml2-plugin.version>
+        <jqa-xml-plugin.version>2.0.0-M4</jqa-xml-plugin.version>
     </properties>
 
     <build>
