--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
   </scm>
 
     <properties>
+        <jqa-core-framework.version>2.0.0-SNAPSHOT</jqa-core-framework.version>
         <!--
          ! Versions of the plugins to be included in a release.
          !-->
@@ -110,46 +111,51 @@
         </plugins>
     </build>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>com.buschmais.jqassistant.plugin</groupId>
-                <artifactId>java</artifactId>
-                <version>${jqa-java-plugin.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.buschmais.jqassistant.plugin</groupId>
-                <artifactId>yaml2</artifactId>
-                <version>${jqa-yaml2-plugin.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.buschmais.jqassistant.plugin</groupId>
-                <artifactId>json</artifactId>
-                <version>${jqa-json-plugin.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.buschmais.jqassistant.plugin</groupId>
-                <artifactId>junit</artifactId>
-                <version>${jqa-junit-plugin.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.buschmais.jqassistant.plugin</groupId>
-                <artifactId>xml</artifactId>
-                <version>${jqa-xml-plugin.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.buschmais.jqassistant.plugin</groupId>
-                <artifactId>maven3</artifactId>
-                <version>${jqa-maven3-plugin.version}</version>
-                <scope>provided</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+    <dependencies>
+        <!-- The Core runtime -->
+        <dependency>
+            <groupId>com.buschmais.jqassistant.core</groupId>
+            <artifactId>runtime</artifactId>
+            <version>${jqa-core-framework.version}</version>
+        </dependency>
+        <!-- The default plugins. Actually they're declared in .jqassistant.yml but here as well to ensure build order in an aggregated reactor -->
+        <dependency>
+            <groupId>com.buschmais.jqassistant.plugin</groupId>
+            <artifactId>java</artifactId>
+            <version>${jqa-java-plugin.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.buschmais.jqassistant.plugin</groupId>
+            <artifactId>yaml2</artifactId>
+            <version>${jqa-yaml2-plugin.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.buschmais.jqassistant.plugin</groupId>
+            <artifactId>json</artifactId>
+            <version>${jqa-json-plugin.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.buschmais.jqassistant.plugin</groupId>
+            <artifactId>junit</artifactId>
+            <version>${jqa-junit-plugin.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.buschmais.jqassistant.plugin</groupId>
+            <artifactId>xml</artifactId>
+            <version>${jqa-xml-plugin.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.buschmais.jqassistant.plugin</groupId>
+            <artifactId>maven3</artifactId>
+            <version>${jqa-maven3-plugin.version}</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
     <repositories>
         <repository>
